// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCardTypes should have specific types: rhelGraphCardTypes 1`] = `
Object {
  "getGranularityOptions": [Function],
}
`;

exports[`RhelGraphCardTypes should return an output for granularity selection: getGranularityOptionsType 1`] = `
Object {
  "options": Array [],
}
`;

exports[`RhelGraphCardTypes should return an output for granularity selection: getGranularityOptionsType:default 1`] = `
Object {
  "options": Array [
    Object {
      "selected": true,
      "title": "t(curiosity-graph.dropdownDaily)",
      "value": "daily",
    },
    Object {
      "title": "t(curiosity-graph.dropdownWeekly)",
      "value": "weekly",
    },
    Object {
      "title": "t(curiosity-graph.dropdownMonthly)",
      "value": "monthly",
    },
    Object {
      "title": "t(curiosity-graph.dropdownQuarterly)",
      "value": "quarterly",
    },
  ],
  "selected": "daily",
}
`;
